@@ -1,6 +1,9 @@
 v3.5.2 (XXXX-XX-XX)
 -------------------
 
+* Fixed issue #10090: fix repeatable seek to the same document in
+  SEARCH operations for ArangoSearch views.
+
 * Fixed issue #10193: Arangoexport does not handle line feeds when exporting as 
   csv.
 
